--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
@@ -154,6 +154,28 @@
     .on-off-content{
       background-color:$contentColor;
     }
+    .on-off-content .on-off-content{
+      padding: 0 $space/2 $space/2 $space/2;
+    }
+    .labelCheck{
+      display: inline-block;
+      margin: 0  $space  0  $space/2;
+      height: auto;
+    }
+    .on-off-title {
+      padding: 0 $space/2 0 $space/2;
+      .checkWrapper {
+        margin-left: $space;
+      }
+    }
+    .checkWrapper{
+      display: inline-block;
+      margin: 0px;
+      height: auto;
+    }
+    .extent-slider{
+      margin-top: $space/2;
+    }
   }
 }
 .metaData {
