--- a/src/Mapbender/WmsBundle/Resources/views/Repository/dimension-form.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/dimension-form.html.twig
@@ -1,18 +1,18 @@
-<div id="dimension{{ num }}" class="on-off" title="units:{#{ dim.vars.data.units }}&#10;unitSymbol:{{ dim.vars.data.unitSymbol }}&#10;default:{{ dim.vars.data.default }}&#10;multipleValues:{%if dim.vars.data.multipleValues %}true{% else %}false{% endif %}&#10;nearestValue:{%if dim.vars.data.nearestValue %}true{% else %}false{% endif %}&#10;current:{%if dim.vars.data.current %}true{% else %}false{% endif %#}">
+<div id="dimension{{ num }}" class="on-off on-off-title">
     <div class="left">{%if dim.vars.data.name != ''%}{{ dim.vars.data.name }}{% else %}undefined{% endif %}</div><div class="left">
-    {{ form_widget(dim.active) }}<label for="{{dim.active.vars.id}}" class="labelCheck" title="Active">active</label>
+        {{ form_widget(dim.active) }}<label for="{{dim.active.vars.id}}" class="labelCheck" title="Active">active</label>
     </div>
     <div class="clear"></div>
 </div>
-<div id="dimension{{ num }}-content" class="on-off-content hidden">
+<div id="dimension{{ num }}-content" class="on-off-content hidden" data-json="{{ dim.json.vars.data }}">
     <div class="left">
         {{ form_widget(dim.multipleValues) }}<label for="{{dim.multipleValues.vars.id}}" class="labelCheck" title="multipleValues">multiple</label>
     </div>
     <div class="left">
-    {{ form_widget(dim.nearestValue) }}<label for="{{dim.nearestValue.vars.id}}" class="labelCheck" title="nearestValue">nearest</label>
+        {{ form_widget(dim.nearestValue) }}<label for="{{dim.nearestValue.vars.id}}" class="labelCheck" title="nearestValue">nearest</label>
     </div>
     <div class="left">
-    {{ form_widget(dim.current) }}<label for="{{dim.current.vars.id}}" class="labelCheck" title="current">current</label>
+        {{ form_widget(dim.current) }}<label for="{{dim.current.vars.id}}" class="labelCheck" title="current">current</label>
     </div>
     <div class="clear"></div>
     {{ form_label(dim.name) }}{{ form_widget(dim.name) }}
@@ -21,12 +21,14 @@
     <div class="clear"></div>
     {{ form_label(dim.unitSymbol) }}{{ form_widget(dim.unitSymbol) }}
     <div class="clear"></div>
-    
     {% if dim.default is defined %}
-    {{ form_label(dim.default) }}{{ form_widget(dim.default) }}
-    <div class="clear"></div>
+        {{ form_label(dim.default) }}{{ form_widget(dim.default) }}
+        <div class="clear"></div>
     {% endif %}
     <label for="{{dim.extentEdit.vars.id}}" class="labelInput" title="Extent">Extent</label>{{ form_widget(dim.extentEdit) }}
     <div class="clear"></div>
-    {{ form_widget(dim.type) }}{{ form_widget(dim.origextent) }}{{ form_widget(dim.extent) }}
+    <div class="clear dimension-type">{{ form_widget(dim.type) }}</div>
+    <div class="clear dimension-origextent">{{ form_widget(dim.origextent) }}</div>
+    <div class="clear dimension-exent">{{ form_widget(dim.extent) }}</div>
+    <div id="dimension{{ num }}-extent" class="extent-slider"></div>
 </div>
