--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -8,10 +8,13 @@
     "bundles/mapbendermanager/sass/manager/services.scss"
   %}
     <link rel="stylesheet" href="{{ asset_url }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/mapbendercore/regional/vendor/jquery/jquery-ui-1.11.1.custom/jquery-ui.min.css') }}" type="text/javascript" />
   {% endstylesheets %}
 {% endblock %}
 
 {% block js %}
+  <script type="text/javascript" src="{{ asset('bundles/mapbendercore/vendor/joii.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/mapbender.wms.dimension.js') }}"></script>
   {{parent()}}
   <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/repository.js') }}"></script>
 {% endblock %}
@@ -64,14 +67,23 @@
         {{ form_widget(form.tiled) }}<label for="{{form.tiled.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.repo.instance.label.tiled"|trans}}</label>
         </div>
         <div class="clear"></div>
-        {{ form_widget(form.ratio) }} <label for="{{form.ratio.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.repo.instance.label.ratio"|trans}}</label>
+
+        {{ form_widget(form.ratio) }} <label for="{{form.ratio.vars.id}}">{{"mb.wms.wmsloader.repo.instance.label.ratio"|trans}}</label>
         <div class="clear"></div>
-        {{ form_widget(form.buffer) }} <label for="{{form.buffer.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.repo.instance.label.buffer"|trans}}</label>
+        {{ form_widget(form.buffer) }} <label for="{{form.buffer.vars.id}}">{{"mb.wms.wmsloader.repo.instance.label.buffer"|trans}}</label>
         <div class="clear"></div>
       </div>
+      {% if form.dimensions is not null and form.dimensions | length > 0 %}
+      <div class="dimensionGroup">
+        <div id="dimension" class="on-off on-off-title">{{ 'mb.wms.repo.instance.label.dimensions' | trans }}</div>
+        <div id="dimension-content" class="on-off-content hidden">
+          {% for dim in form.dimensions %}
+            {% include "MapbenderWmsBundle:Repository:dimension-form.html.twig"  with {'dim': dim, 'num': loop.index }%}
+          {% endfor %}
+        </div>
+      </div>
+      {% endif %}
     </div>
-
-       
     {% set root = instance.source.getRootlayer() %}
     <table id="instanceTable" class="table instanceTable">
       <thead>
