--- a/src/Mapbender/WmsBundle/Resources/views/Repository/dimension-form.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/dimension-form.html.twig
@@ -30,5 +30,5 @@
     <div class="clear dimension-type">{{ form_widget(dim.type) }}</div>
     <div class="clear dimension-origextent">{{ form_widget(dim.origextent) }}</div>
     <div class="clear dimension-exent">{{ form_widget(dim.extent) }}</div>
-    <div id="dimension{{ num }}-extent" class="extent-slider"></div>
+    <div id="dimension{{ num }}-extent" class="mb-slider"></div>
 </div>
