--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
@@ -24,6 +24,9 @@
         </div>
         {{ form_widget(form.screenshotFile) }}
         {{ form_widget(form.maxFileSize) }}
+        {{ form_widget(form.screenshotWidth) }}
+        {{ form_widget(form.screenshotHeight) }}
+        
     </div>
 </div>
 <div class="clearContainer"></div>
@@ -32,3 +35,4 @@
 {{ form_widget(form.description) }}
 
 {{ form_widget(form.removeScreenShot) }}
+{{ form_widget(form.uploadScreenShot) }}
