--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -31,7 +31,7 @@
                 <div class="clearContainer"></div>
             {% include 'MapbenderManagerBundle:Application:form-basic.html.twig' %}
            </div>
-           <div class="right screenshot_img">
+           <div class="right">
                 <div class="messageBox hint">
                     {{"mb.manager.admin.application.create_use" | trans }}
                 </div>
