--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -55,16 +55,22 @@
       </ul>
       <div id="containerBaseData" class="container active containerBaseData">
         <div class="left">{% include 'MapbenderManagerBundle:Application:form-basic.html.twig' %}</div>
-        {% if screenshot is empty %}
-        <div class="right screenshot_img default iconAppDefault"></div>
-        {% else %}
-        <div class="right screenshot_img">
-          <div class="cell">
-            <div class="delete button critical hidden">Delete</div>
-              <img src="{{screenshot}}?t={% if time != null %}{{ time | date('d.m.Y-H:i:s') }}{% endif %}" alt="Load" class="screenshot" />
-            </div>
-          </div>
-        {% endif %}
+        <div class="right">
+            {% if screenshot is empty %}
+                <div class="screenshot_img default iconAppDefault">
+                    <div class="cell_edit">
+                        <img src="" alt="Load" class="screenshot" data-load=true />
+                    </div>
+                </div>
+            {% else %}
+                <div class="screenshot_img">
+                    <div class="cell_edit">     
+                        <div class="delete button critical hidden">X</div>
+                        <img src="{{screenshot}}?t={% if time != null %}{{ time | date('d.m.Y-H:i:s') }}{% endif %}" alt="Load" class="screenshot" data-load=true />
+                    </div>
+                </div>
+            {% endif %}
+        </div>
         <div class="clearContainer"></div>
       </div>
       <div id="containerLayout" class="container containerLayout">
