--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -6,8 +6,8 @@ $contentPatternUrl: $imageBasePath + "/content.png";
 $headPatternUrl: $imageBasePath + "/head.png";
 
 //------------------------------------------------------------------font
-$fontFamily:"Calluna Sans", "Gill Sans", Calibri, "Trebuchet MS", sans-serif;
-$fontSize:14px;
+$fontFamily: "open_sansregular", "Calluna Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+$fontSize:13px;
 
 //-----------------------------------------------------------------other
 $lineHeight:21px;
