fields user,password added for WmsLoader

--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -5,4 +5,14 @@
     <div class="inputWrapper">
         <input name="loadWmsUrl" class="input url" type="text" />
     </div>
+    <br>
+    <label class="labelInput" for="loadWmsUser">{{ "mb.wms.wmsloader.dialog.label.wmsuser"|trans}}:</label>
+    <div class="inputWrapper">
+        <input name="loadWmsUser" class="input url" type="text" />
+    </div>
+    <br>
+    <label class="labelInput" for="loadWmsPass">{{ "mb.wms.wmsloader.dialog.label.wmspass"|trans}}:</label>
+    <div class="inputWrapper">
+        <input name="loadWmsPass" class="input url" type="text" />
+    </div>
 </div>
