--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
@@ -68,7 +68,7 @@
 .iconWarningSmpl, .iconEmail, .iconTwitter,
 .iconFacebook, .iconGooglePlus, .iconSketch, .iconMenu,
 .iconOverview, .iconGpsTarget, .iconClock, .iconFile,
-.iconBolt, .iconStarO, .iconBars, .iconFileText {
+.iconBolt, .iconStarO, .iconBars, .iconFileText, .iconReset {
   &:before{font-family: FontAwesome;}
 }
 
@@ -159,3 +159,4 @@
 .iconKey:before{content:"\f084";}
 .iconTab:before{content:"\f114";}
 .iconTabActive:before{content:"\f07b" !important;}
+.iconReset:before{content:"\f021";}
