--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
@@ -42,6 +42,9 @@
           {% endif %}
           <div class="buttonGroup">
             <a class="iconView iconBig" href="{{ url("mapbender_manager_repository_view",{"sourceId":source.id}) }}" title="{{ 'mb.manager.admin.source.show_metadata' | trans }}"></a>
+            {% if is_granted('EDIT', oid) or is_granted('EDIT', source) %}
+            <a class="iconReset iconBig" href="{{ url("mapbender_manager_repository_update",{"sourceId":source.id}) }}" title="{{ 'mb.manager.admin.source.update' | trans }}"></a>
+            {% endif %}
             {% if is_granted('DELETE', oid) or is_granted('DELETE', source) %}
                <span class="iconRemove iconBig"
                 title="{{"mb.manager.admin.source.delete"|trans}} {{ source.title }}"
