--- a/src/Mapbender/WmsBundle/Resources/views/Repository/updateform.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/updateform.html.twig
@@ -1,6 +1,6 @@
 <fieldset class="serviceAddBox left box">
   <legend>{{"mb.wms.wmsloader.repo.form.label.ogcwms"|trans}}</legend>
-  <form action="{{path('mapbender_manager_repository_update', {'sourceId': form.vars.data.id,'managertype': form.vars.data.getManagertype()})}}" method="post" novalidate="novalidate">
+  <form action="{{path('mapbender_manager_repository_update', {'sourceId': form.vars.data.id})}}" method="post" novalidate="novalidate">
       <label class="left labelInput" for="{{ form.originUrl.vars['id'] }}">{{"mb.wms.wmsloader.repo.form.label.serviceurl" | trans}}</label>
       {{ form_widget(form.originUrl) }}
       <div class="clearContainer"></div>
