fix app overflow scroll

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -20,6 +20,7 @@
 /* ---------------------------------------------------------- CONTENT */
 .templateWrapper{
   margin:0 auto;
+  overflow: hidden;
   @include absolute(0 0 0 0);
 }
 .contentPane{
