--- a/src/Mapbender/WmcBundle/Resources/views/wmcbundle.trans.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/wmcbundle.trans.twig
@@ -19,6 +19,7 @@
 {{ "mb.wmc.error.wmcidloader_notallowed" | trans}}
 {{ "mb.wmc.error.wmcnotfound" | trans ({'%wmcid%': 'wmcid' })}} 
 {{ "mb.wmc.error.wmccannotbeloaded" | trans}}
+{{ "mb.wmc.error.wmcurlloader_notallowed" | trans }}
 {{ "mb.wmc.error.wmccannotberemoved" | trans}}
 {{ "mb.wmc.error.wmcremoved" | trans}}
 {{ "mb.wmc.error.wmccannotbesaved" | trans ({'%wmcid%': 'wmcid' })}}
