--- a/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
@@ -2,6 +2,12 @@
 {{ "mb.wms.wmsloader.class.description" | trans}}
 {{ "mb.wms.wmsloader.tag.wms" | trans}}
 {{ "mb.wms.wmsloader.tag.loader" | trans}}
+
+{{ "mb.wms.dimhandler.class.title" | trans}}
+{{ "mb.wms.dimhandler.class.description" | trans}}
+{{ "mb.wms.dimhandler.tag.dimension" | trans}}
+{{ "mb.wms.dimhandler.tag.handler" | trans}}
+
 {{ "mb.wms.repository.parser.couldnotparse" | trans}} {#{Could not parse CapabilitiesDocument}#}
 {{ "mb.wms.repository.parser.not_supported_document" | trans}} {#{Not supported CapabilitiesDocument}#}
 {{ "mb.wms.repository.parser.not_supported_version" | trans}} {#{The WMS version is not supported}#}
