--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
@@ -3,6 +3,7 @@ $rootPath: "../../../mapbendercore/";
 @import "libs/variables";
 @import "libs/mixins";
 @import "libs/icons";
+@import "element/mbslider";
 
 // ------------------------------------------------------- APPLICATIONS
 .screenshot_upload{
