--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -15,7 +15,10 @@
   <script type="text/javascript" src="{{ asset('bundles/mapbendercore/vendor/joii.min.js') }}"></script>
   <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/mapbender.wms.dimension.js') }}"></script>
   {{parent()}}
-  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/repository.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/repository.js') }}"></script> 
+  {% if form.dimensions is not null and form.dimensions | length > 0 %}
+  <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/backend/instance-dimension.js') }}"></script>
+  {% endif %}
 {% endblock %}
 
 {% block manager_content %}
@@ -73,6 +76,7 @@
         <div class="clear"></div>
       </div>
       {% if form.dimensions is not null and form.dimensions | length > 0 %}
+      <script src="{{ asset('bundles/mapbenderwms/backend/instance-dimension.js') }}"></script>
       <div class="dimensionGroup">
         <div id="dimension" class="on-off on-off-title">{{ 'mb.wms.repo.instance.label.dimensions' | trans }}</div>
         <div id="dimension-content" class="on-off-content hidden">
