--- a/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
@@ -18,4 +18,9 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.follow) }}{{ form_widget(form.configuration.follow) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.centerOnFirstPosition) }}{{ form_widget(form.configuration.centerOnFirstPosition) }}
+    <div class="clearContainer"></div>    {{ form_label(form.configuration.zoomToAccuracy) }}{{ form_widget(form.configuration.zoomToAccuracy) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.configuration.zoomToAccuracyOnFirstPosition) }}{{ form_widget(form.configuration.zoomToAccuracyOnFirstPosition) }}
+    <div class="clearContainer"></div>
 </div>
