--- a/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
@@ -203,6 +203,22 @@
         </ul>
     </li>
   {% endif %}
+  {% if layer.dimension is defined and layer.dimension|length > 0 %}
+  <li>
+    <span class="labelText left">{{ "mb.wms.wmsloader.repo.layer.label.dimension" | trans }}:</span>
+    <ul class="">
+    {% for dimension in layer.dimension %}
+      <li>
+        <span class="metaText">
+          name:'{{ dimension.name }}', units:'{{ dimension.units }}', unitSymbol:'{{ dimension.unitSymbol }}', 
+          default:'{{ dimension.default }}', multipleValues:'{{ dimension.multipleValues }}', nearestValue:'{{ dimension.nearestValue }}',
+          current:'{{ dimension.current }}', extent:'{{ dimension.extent }}'
+        <span>
+      </li>
+    {% endfor %}
+    </ul>
+  </li>
+  {% endif %}
   {% if layer.extent is defined and layer.extent|length > 0 %}
   <li>
     <span class="labelText">{{ "mb.wms.wmsloader.repo.layer.label.extent" | trans }}:</span>
