add, change functions for dimesnionshandler

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/mbslider.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/mbslider.scss
@@ -1,3 +1,6 @@
+@import "libs/variables";
+@import "libs/mixins";
+
 /* UI Mapbender slider */
 .mb-slider.ui-slider{
     font-family: $fontFamily;
