--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -26,6 +26,7 @@
     "bundles/mapbendermanager/sass/element/zoombar.scss"
     "bundles/mapbendermanager/sass/element/basesourceswitcher.scss"
     "bundles/mapbendermanager/sass/element/simplesearch.scss"
+    "bundles/mapbendercore/sass/element/mbslider.scss"
     %}
     <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
@@ -42,9 +43,9 @@
   <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/application-edit.js') }}"></script>
   
   
-<script type="text/javascript" src="{{ asset('bundles/mapbendercore/vendor/joii.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/mapbenderwms/mapbender.wms.dimension.js') }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/mapbenderwms/backend/dimensionshandler.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbendercore/vendor/joii.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/mapbender.wms.dimension.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/backend/dimensionshandler.js') }}"></script>
 {% endblock %}
 
 {% block manager_content %}
