clear form values

--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -3,16 +3,16 @@
     <br>
     <label class="labelInput" for="loadWmsUrl">{{ "mb.wms.wmsloader.dialog.label.wmsurl"|trans}}:</label>
     <div class="inputWrapper">
-        <input name="loadWmsUrl" class="input url" type="text" value="http://wms.wheregroup.com/cgi-bin/mapbender_user.xml?VERSION=1.3.0&REQUEST=GetCapabilities&SERVICE=WMS"/>
+        <input name="loadWmsUrl" class="input url" type="text" />
     </div>
     <br>
     <label class="labelInput" for="loadWmsUser">{{ "mb.wms.wmsloader.dialog.label.wmsuser"|trans}}:</label>
     <div class="inputWrapper">
-        <input name="loadWmsUser" class="input url" type="text" value="testuser"/>
+        <input name="loadWmsUser" class="input url" type="text" />
     </div>
     <br>
     <label class="labelInput" for="loadWmsPass">{{ "mb.wms.wmsloader.dialog.label.wmspass"|trans}}:</label>
     <div class="inputWrapper">
-        <input name="loadWmsPass" class="input url" type="text" value="testpassword" />
+        <input name="loadWmsPass" class="input url" type="text" />
     </div>
 </div>
