change basic auth. for wms

--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -13,6 +13,6 @@
     <br>
     <label class="labelInput" for="loadWmsPass">{{ "mb.wms.wmsloader.dialog.label.wmspass"|trans}}:</label>
     <div class="inputWrapper">
-        <input name="loadWmsPass" class="input url" type="text" />
+        <input name="loadWmsPass" class="input url" type="password" />
     </div>
 </div>
