add scroll-x auto for accordion elements

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
@@ -109,7 +109,7 @@
             bottom:0;
             top:0;
             overflow-y: auto;
-            overflow-x: hidden;
+            overflow-x: auto;
             width:100%;
           }
         }
