add backend layersets for a map element

--- a/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
@@ -50,3 +50,8 @@
     <div class="clearContainer"></div>
     <div class="clearContainer"></div>
 </div>
+<script type="text/javascript">
+$('.elementFormMap .choiceExpandedSortable').sortable({
+axis: "y"
+});
+</script>
