--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/form.scss
@@ -9,7 +9,30 @@
   }
   .input{width:100%}
   .dropdown{min-width:70%;}
-  .inputWrapper, select{width:70%;}
+  .inputWrapper, select, .choiceExpandedSortable{width:70%;}
+  .choiceExpandedSortable {
+      position:relative;
+      display:inline-block;
+      border:solid 1px lighten($thirdColor, 15%);
+      background-color: $contentColor;
+      .sortableItem {
+        position:relative;
+        display:block;
+        float: none;
+        clear: both;
+        width: 100%;
+        height:$inputHeight;
+        padding-left: 5px;
+        cursor: move;
+        .checkWrapper, label{
+          color: $secondColor;
+          margin-bottom: 0px;
+          line-height: $lineHeight;
+          cursor: move;
+        }
+        .sortableItem :hover{ background-color: darken($contentColor, 10%); }
+      }
+  }
 }
 .defaultForm{
   $label:70px;
