add translations, add create node

--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertree.html.twig
@@ -3,6 +3,9 @@
         {{ form_widget(form.configuration.showBaseSource) }}<label for="{{form.configuration.showBaseSource.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.showbasesources"|trans}}</label>
     </div>
     <div class="left">
+        {{ form_widget(form.configuration.useTheme) }}<label for="{{form.configuration.useTheme.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.usetheme"|trans}}</label>
+    </div>
+    <div class="left">
         {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.autoopen"|trans}}</label>
     </div>
     <div class="clearContainer"></div>
