--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertree.html.twig
@@ -3,7 +3,7 @@
         {{ form_widget(form.configuration.showBaseSource) }}<label for="{{form.configuration.showBaseSource.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.showbasesources"|trans}}</label>
     </div>
     <div class="left">
-        {{ form_widget(form.configuration.useTheme) }}<label for="{{form.configuration.useTheme.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.usetheme"|trans}}</label>
+        {{ form_widget(form.configuration.showHeader) }}<label for="{{form.configuration.showHeader.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.showheader"|trans}}</label>
     </div>
     <div class="left">
         {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.autoopen"|trans}}</label>
@@ -19,10 +19,19 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.titlemaxlength) }}{{ form_widget(form.configuration.titlemaxlength) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.menu) }}{{ form_widget(form.configuration.menu) }}
+    <div class="clearContainer"></div>
     <div class="left">
-        {{ form_widget(form.configuration.showHeader) }}<label for="{{form.configuration.showHeader.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.showheader"|trans}}</label>
+        {{ form_widget(form.configuration.useTheme) }}<label for="{{form.configuration.useTheme.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.usetheme"|trans}}</label>
     </div>
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.menu) }}{{ form_widget(form.configuration.menu) }}
+    {% if form.configuration.themes is defined %}
+      <label for="{{form.configuration.themes.vars.id}}" class="labelInput">{{"mb.core.admin.layertree.label.themes"|trans}}</label>
+      <div id="{{form.configuration.themes.vars.id}}" class="collectionContainer">
+      {% for theme in form.configuration.themes %}
+        {% include "MapbenderCoreBundle:ElementAdmin:layertheme.html.twig"  with {'theme': theme} %}
+      {% endfor %}
+      </div>
+    {% endif %}
     <div class="clearContainer"></div>
 </div>
