fix layertree dialog title

--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element mb-element-layertree hidden">
+<div id="{{ id }}" class="mb-element mb-element-layertree hidden" data-title="{{ title |trans }}">
   <li class="hidden leave showLeaves" data-state="" data-title="">
     <div class="leaveContainer">
       <span class="layer-spinner"></span>
