--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.trans.twig
@@ -135,3 +135,8 @@
 {{ "mb.core.htmlelement.class.title" | trans }}
 {{ "mb.core.htmlelement.class.description" | trans }}
 {{ "mb.core.htmlelement.tag.html" | trans }}
+
+{{ "mb.core.redlining.class.title" | trans}}
+{{ "mb.core.redlining.class.description" | trans}}
+{{ "mb.core.redlining.tag.redlining" | trans}}
+{{ "mb.core.redlining.tag.geometry" | trans}}
