--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/button.php.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/button.php.twig
@@ -8,11 +8,11 @@ use Symfony\Component\HttpFoundation\Response;
 
 class {{ className }} extends Element {
     public static function getClassTitle() {
-        return "Please give me a title";
+        return "{{ className }} - please give me a title";
     }
 
     public static function getClassDescription() {
-        return "Please give me a description";
+        return "{{ className }} - please give me a description";
     }
 
     public static function getClassTags() {
@@ -31,15 +31,16 @@ class {{ className }} extends Element {
 
     public static function getDefaultConfiguration() {
         return array(
-            'title' => 'button',
+            'title' => '{{ className }} - button',
             'tooltip' => 'button',
-            'label' => true,
-            'icon' => null,
             'target' => null,
+            'label' => true,
+            'icon' => 'iconPoi',
             'click' => null,
             'group' => null,
             'action' => null,
-            'deactivate' => null);
+            'deactivate' => null
+        );
     }
 
     public function httpAction($action) {
