--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertheme.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertheme.html.twig
@@ -3,7 +3,10 @@
     <div class="collectionItemProperty">
         <label class="labelInput">{{ theme.vars.data.title }}</label>{{ form_widget(theme.title) }}
     </div>
-    <div class="collectionItemProperty">
-        {{ form_widget(theme.opened) }}<label for="{{theme.opened.vars.id}}" class="labelInput">{{"mb.core.admin.layertree.label.theme.opened"|trans}}</label>
+    <div class="collectionItemProperty item-opened" title="{{"mb.core.admin.layertree.label.theme.opened"|trans}}">
+        {{ form_widget(theme.opened) }}<!--label for="{{theme.opened.vars.id}}" class="labelInput">{{"mb.core.admin.layertree.label.theme.opened"|trans}}</label-->
+    </div>
+    <div class="collectionItemProperty item-activate" title="{{"mb.core.admin.layertree.label.theme.activate"|trans}}">
+        {{ form_widget(theme.activate) }}<!--label for="{{theme.activate.vars.id}}" class="labelInput">{{"mb.core.admin.layertree.label.theme.activate"|trans}}</label-->
     </div>
 </div>
