--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/layertree.scss
@@ -6,4 +6,10 @@
   .labelInput{width:$label;}
   .checkWrapper{margin-bottom:$space/2;}
   .labelCheck{margin-right:$space;}
+  .collectionContainer{
+    .item-opened .iconCheckbox:before{content:"\f07b" !important;}
+    .item-opened .iconCheckboxActive:before{content:"\f07c" !important;}
+    .item-activate .iconCheckbox{@include opacity(.3);}
+    .item-activate .iconCheckboxActive{@include opacity(1);}
+  } 
 }
