add print for featureinfo accordion

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/featureinfo.scss
@@ -9,4 +9,7 @@
     width: 100%;
     border-width: 0px;
   }
+  .accordionContainer > .container{display:none}
+  .accordionContainer > .container.active{display:block}
+  
 }
