--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -9,7 +9,14 @@
     display:none;
     margin-right:5px;
   }
-
+  .placeholder{
+    &:before{
+      content: "\f096";
+      font-family: 'FontAwesome';
+      visibility: hidden;
+    }
+    display:block;
+  }
   // needed for the feature info icon
   .featureInfoWrapper{
     width:$space;
@@ -20,7 +27,6 @@
   .themeContainer{
     border-left:dotted 1px black;
     margin-bottom:1px; // Fix for Firefox
-
     // elements with childrens
     & > .leaveContainer{
       position: relative;
@@ -30,15 +36,6 @@
     .leave{
       margin-left:20px;
       position: relative;
-/*
-      &:before{
-        content:'';
-        display: block;
-        height:5px;
-        width:5px;
-        border-top:dotted 1px black;
-        @include absolute(10px '' '' -15px);
-      }*/
     }
     .leaveContainer{
       margin-left:-6px;
@@ -88,12 +85,15 @@
       }
     }
   }
-  .checkWrapper{position: relative;}
+  .checkWrapper{
+    position: relative;
+    &:before{background-color: $lightFontColor;}
+  }
 
   [data-state="loading"]{
     @include opacity(.7);
     @extend .iconActivity;
-    &:before{
+    &:after{
       -webkit-animation:spin 1s linear infinite;
       -moz-animation:spin 1s linear infinite;
       animation:spin 1s linear infinite;
