--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -10,12 +10,12 @@
     margin-right:5px;
   }
   .placeholder{
+    display:block;
     &:before{
       content: "\f096";
       font-family: 'FontAwesome';
       visibility: hidden;
     }
-    display:block;
   }
   // needed for the feature info icon
   .featureInfoWrapper{
@@ -93,11 +93,11 @@
   [data-state="loading"]{
     @include opacity(.7);
     @extend .iconActivity;
-    &:after{
+    &:before{
       -webkit-animation:spin 1s linear infinite;
       -moz-animation:spin 1s linear infinite;
       animation:spin 1s linear infinite;
-      @include absolute('' $space*2 '' '');
+      @include absolute('' $space '' '');
     }
   }
   [data-state="error"]{
@@ -105,7 +105,7 @@
     .layer-title{color:$errorColor !important;}// if error, overwrite the title color
     &:before{
       color:$errorColor;
-      @include absolute('' $space*2 '' '');
+      @include absolute('' $space '' '');
     }
   }
   >ul{padding-left: 6px;}
