fjx SCSS URL filter
(cherry picked from commit 59d4aa200ddd6096950e8c0130e507423ff4e4fc)

--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
@@ -1,3 +1,4 @@
+//$iconBasePath "bundles/mapbendercore/fonts";
 @font-face {
   font-family: 'FontAwesome'; //v.3.0.1
   src: url($iconBasePath + '/fontawesome-webfont.eot?');
