--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_variables.scss
@@ -1,5 +1,5 @@
 //--------------------------------------------------------------patterns
-$rootPath:  "../../" !default;
+$rootPath:  "bundles/mapbendercore/"; // !default;
 $imageBasePath: $rootPath + "image";
 $iconBasePath: $rootPath + "fonts";
 $contentPatternUrl: $imageBasePath + "/content.png";
