add vendor specific for wms

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
@@ -139,12 +139,13 @@ $rootPath: "../../../mapbendercore/";
     margin-bottom:$space/2;
   }
   .leftContainer .inputWrapper input{ width: 100%; }
-  .dimensionGroup{
+  .extendedGroup{
     width: 326px;
     position:absolute;
     right:0px;
     font-size:12px;
     border:solid 1px $thirdColor;
+    z-index:1;
     .on-off{
       background-color:darken($contentColor,20%);
       border: solid 1px darken($contentColor,40%);
@@ -156,7 +157,7 @@ $rootPath: "../../../mapbendercore/";
     .on-off-content{
       background-color:$contentColor;
     }
-    .on-off-content .on-off-content{
+    .vendorspecific-content,.on-off-content .on-off-content{
       padding: 0 $space/2 $space/2 $space/2;
     }
     .labelCheck{
@@ -166,18 +167,23 @@ $rootPath: "../../../mapbendercore/";
     }
     .on-off-title {
       padding: 0 $space/2 0 $space/2;
-      .checkWrapper {
-        margin-left: $space;
-      }
+      .checkWrapper {margin-left: $space;}
     }
     .checkWrapper{
       display: inline-block;
       margin: 0px;
       height: auto;
     }
-    .mb-slider{
-      margin-top: $space/2;
+    .vendorspecific-content{
+      .dropdown,.inputWrapper,.checkWrapper{
+        width:200px !important;
+        margin:0px;
+      }
+      input {width:100%;}
+      .labelInput{width:80px;}
+      .collectionItem > label{display:none;}
     }
+    .mb-slider{margin-top: $space/2;}
   }
 }
 .metaData {
