fix: set dafault font family

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/mbslider.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/mbslider.scss
@@ -1,3 +1,8 @@
+@import "libs/variables";
+@import "libs/mixins";
+
+$fontFamily: "Calluna Sans", "Gill Sans", Calibri, "Trebuchet MS", sans-serif;
+
 /* UI Mapbender slider */
 .mb-slider.ui-slider{
     font-family: $fontFamily;
